force-app/main/default/objects/Contact/fields/Oak__c.field-meta.xml
<CustomField>
    <fullName>Oak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oak</label>
    <type>Checkbox</type>
</CustomField>