force-app/main/default/objects/Contact/fields/Teak__c.field-meta.xml
<CustomField>
    <fullName>Teak__c</fullName>
    <label>Teak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>