force-app/main/default/objects/Contact/fields/Zing__c.field-meta.xml
<CustomField>
    <fullName>Zing__c</fullName>
    <label>Zing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>